# Pentagonal-tiling

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CalculateGap.cpp  CalculateGap.h  Makefile  README.org  appveyor.yml  lines.txt  points.txt  report_pres.html  report_pres.org  test.cpp  test1.txt  test2.txt
archive/DE/: D50.rez  cec17_test_func.cc  de.h  lshade.cc  main.cc  resultsD100.tex  resultsD30.tex  resultsD50.tex  search_algorithm.cc
archive/DE_matlab/PentagonalTiling/: objfun.m
doc/: README.org  ThreadCommunication.xml
doc/archive/: report_pres.html
src/: CMakeLists.txt  CalculateGap.cpp  CalculateGap.h  CalculateGap.hpp  Config.h.in  Link.hpp  Makefile  PrimitiveTile.cpp  PrimitiveTile.hpp  Side.hpp  Square.hpp  Tile.h  Tile.hpp  Worker.cpp  Worker.hpp  boundaryDetection.cpp  boundaryDetection.hpp  cgal.hpp  concaveHull.cpp  concaveHull.hpp  data.csv  de.h  example.csv  hullfinder.cpp  hullfinder.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myGeometry.cpp  myGeometry.hpp  pentagonGen.cpp  pentagonGen.hpp  plot_lines.py  rawData.csv  run_de.cpp  run_gui.cpp  run_tests.cpp  search_algorithm.cc  sweepLine.cpp  (+6 more)
src/DE/: CMakeLists.txt  D10.rez  D100.rez  D30.rez  Makefile  README.txt  cec17_test_func.cc  de.h  lshade.cc  main.cc  resultsD10.tex  search_algorithm.cc
src/DE/PentagonalTiling/: Rundeopt.m
src/DLL/: CMakeLists.txt  CalculateGap.cpp  CalculateGap.hpp  PrimitiveTile.cpp  PrimitiveTile.hpp  Side.hpp  Square.hpp  main.cpp
src/QTDrawLine/: QTDrawLine.pro  test2.pro  widget.cpp  widget.h
src/libSimpleSvg/: CMakeLists.txt  drawSvg.cpp  drawSvg.hpp  simple_svg_1.0.0.hpp
test/: run_tests.cpp
test2/: widget.cpp
